The most significant changes in the code include the renaming and removal of properties in the `PrinterHead` class, the modification of the `TransferFileToSD` method in the `PrintService` class, the addition of new properties in the `Printer` class, and the implementation of the `ITemperatures` interface in several classes. The UI has also been updated to reflect these changes and new features have been added, such as the ability to view and start printing uploaded files, and the creation of preheating profiles. New classes and interfaces have been added to manage temperatures and printers.
1. The `PrinterHead` class has been updated with the property `PartCoolingFanPresent` renamed to `HasCoolingFan` and the `Camera` property removed.
2. The `TransferFileToSD` method in the `PrintService` class now accepts a string of G-code content instead of a file path.
3. The `Printer` class now includes `Name` and `Id` properties and the `Head` property has been replaced with a list of `PrinterHead` objects named `Extruders`.
4. The `BedTemps`, `ChamberTemps`, and `HotendTemps` classes now implement the `ITemperatures` interface, with several properties renamed for consistency.
5. The `BedTemperatureService` and `HotendTemperatureService` classes now use the `ITemperatures` interface instead of the specific temperature classes.
6. The `PrinterDataServiceTest` class has been refactored, with many properties added and removed, and several methods updated or added.
7. The `PrintingService` class has been updated with a new `TransferFileToSD` method and a new `uploadFileName` property.
8. The UI has been updated to reflect these changes, with new features such as the ability to view and start printing uploaded files, and the creation of preheating profiles.
9. New classes and interfaces have been added to manage temperatures and printers, including the `ITemperatures` interface, the `ChamberTemperatureService` class, and the `PrintersService` class.
10. The `Program.cs` file has b

--- a/WebUIBlazor/Pages/ControlPanel.razor
+++ b/WebUIBlazor/Pages/ControlPanel.razor
@@ -98,9 +98,11 @@ else
     private IList<ITrace> data;
     private IEnumerable<EventDataPoint> ClickInfos { get; set; }
 
-
     protected override void OnInitialized()
     {
+
+        int xSize = printer.SelectedPrinter?.Bed?.XSize ?? 0;
+        int ySize = printer.SelectedPrinter?.Bed?.YSize ?? 0;
         background.SecondElapsed += OnUpdate;
 
         config = new Config
@@ -124,8 +126,8 @@ else
             {
                 Name = "ScatterTrace",
                 Mode = ModeFlag.None,
-                X = Enumerable.Range(0, printer.Printer.Bed.XSize + 1).SelectMany(_ => Enumerable.Range(0, printer.Printer.Bed.XSize + 1)).Cast<object>().ToList(),
-                Y = Enumerable.Range(0, printer.Printer.Bed.YSize + 1).SelectMany(y => Enumerable.Repeat(y, printer.Printer.Bed.YSize + 1)).Cast<object>().ToList()
+                X = Enumerable.Range(0, xSize + 1).SelectMany(_ => Enumerable.Range(0, xSize + 1)).Cast<object>().ToList(),
+                Y = Enumerable.Range(0, ySize + 1).SelectMany(y => Enumerable.Repeat(y, ySize + 1)).Cast<object>().ToList()
             }
             };
 
