--- a/WebUIBlazor/Shared/NavMenu.razor
+++ b/WebUIBlazor/Shared/NavMenu.razor
@@ -3,4 +3,5 @@
     <MudNavLink Href="/controlpanel" Match="NavLinkMatch.Prefix">Control Panel</MudNavLink>
     <MudNavLink Href="/print" Match="NavLinkMatch.Prefix">Print</MudNavLink>
     <MudNavLink Href="/printersettings" Match="NavLinkMatch.Prefix">Printer Settings</MudNavLink>
+    <MudNavLink Href="/printers" Match="NavLinkMatch.Prefix">Printer</MudNavLink>
 </MudNavMenu>
