--- a/WebUIBlazor/Pages/Printers.razor
+++ b/WebUIBlazor/Pages/Printers.razor
@@ -51,6 +51,8 @@
                     }
 
                     <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="() => printer.ChoosePrinter(p)">Select</MudButton>
+                    <MudButton Variant="Variant.Filled" Color="Color.Primary" OnClick="() => printer.RemovePrinter(p)">Delete Profile</MudButton>
+
                 </MudList>
             </MudExpansionPanel>
         }
@@ -59,4 +61,9 @@
 
 @code {
 
+
+    protected override void OnInitialized()
+    {
+        printer.LoadData();
+    }
 }
