--- a/WebUIBlazor/Pages/Printers.razor
+++ b/WebUIBlazor/Pages/Printers.razor
@@ -1,4 +1,5 @@
 ﻿@page "/printers"
+@inject Data.PrinterDataServiceTest printer
 
 <MudCard>
     <MudExpansionPanels MultiExpansion="true">
@@ -64,6 +65,6 @@
 
     protected override void OnInitialized()
     {
-        printer.LoadData();
+        printer.Printers = printer.LoadPrinterData<MachineControlHub.Printer>(Data.PrinterDataServiceTest.PRINTER_DATA_PATH);
     }
 }
